--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "postcss": "^8.4.47",
     "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.11",
+    "terser": "^5.32.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.19"
