--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,17 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
+
+[dev]
+  command = "npm run dev"
+  port = 5173
+  publish = "dist"
+  targetPort = 5173
 
 [[redirects]]
   from = "/*"
