feat: enhance admin sidebar visibility with dark theme and improve navigation styling
- Updated AdminLayout with dark theme for better visibility
- Improved button states (hover, active) for better user feedback
- Added consistent spacing and transitions
- Fixed React import in AdminLayout

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,7 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "types": ["vite/client", "node", "vitest/globals"],
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -26,5 +27,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "src/types"]
 }
