--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,13 @@
 [build]
-  command = "npm run build"
+  command = "NODE_OPTIONS=--max_old_space_size=4096 npm run build"
   publish = "dist"
   functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
+  NODE_OPTIONS = "--max_old_space_size=4096"
+  CI = "false"
 
 [dev]
   command = "npm run dev"
