fix(fitbit): Resolve data loading issues and timezone mismatch
- Refactored 'fitbit-fetch-data' Edge Function to use POST requests for reliability.
- Corrected authentication flow to use the proper Supabase admin client.
- Fixed a critical timezone bug by passing the client's local date to the server.
- Ensured the function is robust against silent failures and provides clearer logging.
- Switched 'get-fitbit-profile' to use SERVICE_ROLE_KEY for token refreshes.

--- a/supabase/functions/tsconfig.json
+++ b/supabase/functions/tsconfig.json
@@ -1,42 +1,26 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["deno"],
-    "typeRoots": ["./node_modules/@types", "./types"],
-    "allowJs": true,
-    "checkJs": false,
-    "noEmit": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "baseUrl": ".",
-    "lib": ["es2020", "dom"],
-    "paths": {
-      "std/*": ["https://deno.land/std@0.168.0/*"],
-      "@supabase/supabase-js": ["https://esm.sh/@supabase/supabase-js@2"]
-    },
+    // Enable latest features
+    "lib": ["ESNext", "deno.window"],
+    "target": "ESNext",
+
+    // Bundler mode for module resolution
+    "moduleResolution": "bundler",
+    "module": "ESNext",
     "allowImportingTsExtensions": true,
-    "allowSyntheticDefaultImports": true,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "strictFunctionTypes": false,
-    "strictBindCallApply": false,
-    "strictPropertyInitialization": false,
-    "noImplicitThis": false,
-    "alwaysStrict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": false,
-    "noFallthroughCasesInSwitch": false
+    "verbatimModuleSyntax": true,
+    "noEmit": true,
+
+    // Best practices
+    "strict": true,
+    "skipLibCheck": true,
+    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
+
+    // Supabase-specific
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
-  "include": [
-    "**/*.ts",
-    "**/*.d.ts"
-  ],
+  "include": ["**/*.ts", "**/*.d.ts"],
   "exclude": ["node_modules"]
 }
