Update vercel.json with cache control settings

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,13 @@
   ],
   "routes": [
     {
+      "src": "/(.*)",
+      "dest": "/index.html",
+      "headers": {
+        "cache-control": "no-cache, no-store, must-revalidate"
+      }
+    },
+    {
       "src": "/assets/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable",
