chore: update vercel routes - add filesystem handle and fix catch-all order

--- a/vercel.json
+++ b/vercel.json
@@ -11,13 +11,8 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": {
-        "cache-control": "no-cache, no-store, must-revalidate"
-      }
-    },
+    { "handle": "filesystem" },
+
     {
       "src": "/assets/(.*)",
       "headers": {
