Sanitize env files and latest profile fixes

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 
 # Fitbit Configuration
 VITE_FITBIT_CLIENT_ID=23QJQ3
-VITE_FITBIT_CLIENT_SECRET=ff2f252180742b4c336459edc3f3d6c0
+# Replace with your Fitbit client secret when testing locally
+VITE_FITBIT_CLIENT_SECRET=YOUR_FITBIT_CLIENT_SECRET
 VITE_SITE_URL=http://localhost:3000
