--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,13 @@ build
 out
 
 # Environment variables
+.env.backup
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 # Editor directories and files
 .vscode/*
